Commerce banking page fixes on Tablet Device.

--- a/css/style.css
+++ b/css/style.css
@@ -833,12 +833,11 @@ margin-top: 30px;*/
 
 @media (min-width: 992px) and (max-width: 1024px) {
   .col-spaced-logo {
-      height: 135px !important;
+    height: 135px !important;
   }
 }
 
 @media (min-width: 992px) {
-
   .col-md-20 {
     width: 20%;
     float: left;
@@ -2549,6 +2548,15 @@ margin-left: 30px;
 }
 
 @media only screen and (max-width:1199px) and (min-width: 993px) {
+  p.mt-tab {
+    margin-top: 6%;
+  }
+  .row.mt-endeca {
+    margin-top: 10px;
+  }
+  p.mt-ws.mt-tab-ws, p.mt-ws-s.mt-tab-ws {
+    padding-top: 20px;
+  }
   .mt14 {
     margin-top: 6px !important;
   }
